# OPALX

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  C++-Readme  CMakeLists.txt  CMakeUserPresets.json  CTestConfig.cmake  Doxyfile  Doxyfile.in  HANDOFF.md  INSTALL  LICENSE  OPAL-202x.code-workspace  README  README.md  VENV.md  beam-beam-summary.md  gen_OPALrevision
doc/user_guide/: CMakeLists.txt  Makefile  UseLATEX.cmake  actions.tex  autophase.tex  benchmarks.tex  bibliography.bib  changelog.tex  control.tex  conventions.tex  distribution.tex  elements.tex  errors.tex  fieldemission.tex  fieldmaps.tex  fieldsolvers.tex  footer.tex  format.tex  geometry.tex  header.tex  installation.tex  introduction.tex  lines.tex  macros.tex  makeuser  match.tex  multipact.tex  noversion.tex  opal-flavours.tex  opal-madx.tex  opal_user_guide.tex  opalcycl.tex  opale.tex  opalmap.tex  opalt.tex  optimiser.tex  packages.tex  partmatter.tex  physics.tex  quick-installation.tex  (+9 more)
ippl/: CMakeLists.txt  Doxyfile  INSTALL  LICENSE
ippl/src/: CMakeLists.txt  Ippl.h  ReadMeBuild  config.h.in
ippl/test/: CMakeLists.txt  Makefile.def
opt-pilot/: CMakeLists.txt  README.mkd  config.h.in
opt-pilot/CMakeModules/: FindCLASSIC.cmake  FindGSL.cmake  FindH5hut.cmake  FindHDF5.cmake  FindIPPL.cmake  FindOPAL.cmake
opt-pilot/Drivers/: CMakeLists.txt  hwloc.cpp  oneMaster.cpp
opt-pilot/Expression/: CMakeLists.txt  ProbeVariable.h  RadialPeak.h  SDDSVariable.h  SumErrSq.h  SumErrSqRadialPeak.h
opt-pilot/Optimizer/: HomotopyImpl.cpp  HomotopyImpl.h
opt-pilot/Pilot/: Pilot.h  Worker.h
opt-pilot/Simulation/: CMakeLists.txt  FixedValueSimulation.cpp  FixedValueSimulation.h  FunctionEvaluator.cpp  OpalSimulation.cpp  OpalSimulation.h
opt-pilot/Tests/: CMakeLists.txt  ExpressionTest.cpp  FromFileExpressionTest.cpp  HashNameGeneratorTest.cpp  IndividualTest.cpp  PopulationTest.cpp  SDDSParserTest.cpp  SumErrSqExpressionTest.cpp  gentest.data  gentest.tmpl
opt-pilot/Util/: CMakeLists.txt  CommentAnnotatedInputFileParser.cpp  HashNameGenerator.h  InputFileParser.h  MPIHelper.h  OpalInputFileParser.h  OptPilotException.h  ProbeReader.h  SDDSParser.cpp  SDDSParser.h  SDDSReader.cpp  SDDSReader.h  Types.h
projects/initializer/: CMakeLists.txt  Cosmology.cpp  Initializer.cpp  Initializer.h  InputParser.cpp  MT_Random.h  Makefile  Output.cpp  Output.h  Parallelization.cpp  Parallelization.h  distribution.h  main.cpp
projects/mc4/: Makefile.am  PwrSpec.cc  PwrSpec.hh  SimData.hh  analysis.gpl  autogen-iff.sh  autogen.sh  configure.ac  mc4.cpp
projects/mc4-new/: CMakeLists.txt  ReadMe
projects/progsch/: Makefile.am  ReadMe  autogen.sh  configure.ac  mc4.cpp  saved_svn_version.txt
src/: #clear#  CMakeLists.txt  Copyright.readme  IpplVersions.h  IpplVersions.h.in  Main.cpp  OPALTypes.h  OPALconfig.h  OPALtypes.h  addToDoxygenMainPage.h  changes.cpp  config.h  config.h.in  doAllChanes.sh  opal.cpp  opal.h
src/.Solvers/: CMakeLists.txt  IrregularDomain.cpp  IrregularDomain.h  PoissonSolver.h  RegularDomain.cpp  RegularDomain.h
src/AbsBeamline/: #ElementBase.h#  AttributeSet.h  BeamBeam.cpp  BeamBeam.h  BeamBeamDefinitions.h  BeamlineVisitor.h  BendBase.cpp  BendBase.h  CMakeLists.txt  Component.cpp  Component.h  Corrector.cpp  Corrector.h  Drift.cpp  Drift.h  ElementBase.cpp  ElementBase.h  Ip.cpp  Ip.h  Laser.cpp  Marker.cpp  Marker.h  Monitor.cpp  Monitor.h  Multipole.cpp  Multipole.h  MultipoleT.cpp  MultipoleT.h  MultipoleTBase.cpp  MultipoleTBase.h  MultipoleTCurvedConstRadius.cpp  MultipoleTCurvedConstRadius.h  MultipoleTCurvedVarRadius.cpp  MultipoleTCurvedVarRadius.h  MultipoleTStraight.cpp  MultipoleTStraight.h  Offset.cpp  Offset.h  PluginElement.cpp  PluginElement.h  (+19 more)
src/AbstractObjects/: Attribute.cpp  Attribute.h  AttributeHandler.cpp  AttributeHandler.h  BeamSequence.h  CMakeLists.txt  Element.cpp  Element.h  Expressions.h  Object.cpp  Object.h  OpalData.cpp  OpalData.h  OpalParticle.cpp  OpalParticle.h  PlaceRep.cpp  RangeRep.cpp  Table.cpp  Table.h
src/Algebra/: CMakeLists.txt
src/Algorithms/: #ParallelTracker.h#  #PartBunch.cpp#  #PartBunch.hpp#  .#PartBunch.cpp  .PartBunch.cpp  .PartBunch.h  .PartBunchBase.h  .PartBunchBase.hpp  AbstractTimeDependence.h  AbstractTracker.h  AutophaseTracker.cpp  AutophaseTracker.h  BeamBeam3D.cpp  BeamBeam3D.h  BoostMatrix.h  CMakeLists.txt  CavityAutophaser.cpp  CavityAutophaser.h  CoordinateSystemTrafo.cpp  CoordinateSystemTrafo.h  Ctunes.cpp  Ctunes.hpp  DefaultVisitor.cpp  DefaultVisitor.h  DistributionMoments.cpp  DistributionMoments.h  Flagger.h  Hamiltonian.cpp  Hamiltonian.h  IndexMap.cpp  IndexMap.h  LieMapper.cpp  LieMapper.h  MPSplitIntegrator.cpp  MPSplitIntegrator.h  MapAnalyser.cpp  MapAnalyser.h  Matrix.h  MultiBunchHandler.cpp  MultiBunchHandler.h  (+51 more)
src/Amr/: AbstractAmrWriter.h  AmrBoxLib.cpp  AmrBoxLib.h  AmrBoxLib_F.h  AmrDefs.h  AmrObject.cpp  AmrObject.h  AmrPythonWriter.cpp  AmrPythonWriter.h  AmrSliceWriter.cpp  AmrSliceWriter.h  AmrYtWriter.cpp  AmrYtWriter.h  BoxLibLayout.h  BoxLibLayout.hpp  BoxLibParticle.h  BoxLibParticle.hpp  CMakeLists.txt
src/Aperture/: Aperture.cpp  CMakeLists.txt  Split.cpp
src/AppTypes/: AntiSymTenzor.h  CMakeLists.txt  SymTenzor.h  Tenzor.h  Vektor.h
src/Attributes/: Attributes.cpp  Attributes.h  Bool.cpp  BoolArray.cpp  CMakeLists.txt  PredefinedString.cpp  Real.cpp  RealArray.cpp  UString.cpp  UString.h  UpperCaseString.cpp  UpperCaseStringArray.cpp
src/BasicActions/: CMakeLists.txt  Call.cpp  DumpEMFields.cpp  DumpEMFields.h  DumpFields.cpp  DumpFields.h  Echo.cpp  Option.cpp  Option.h  PSystem.cpp  Save.cpp  Select.cpp  System.cpp  Value.cpp
src/BeamlineCore/: BeamBeamRep.cpp  BeamBeamRep.h  CMakeLists.txt  DriftRep.h  IpRep.cpp  IpRep.h  MarkerRep.h  MonitorRep.h  MultipoleRep.h  ProbeRep.h  RFCavityRep.h  SolenoidRep.h  TravelingWaveRep.h
src/BeamlineGeometry/: CMakeLists.txt  Euclid3D.cpp  Euclid3D.h  Euclid3DGeometry.h  Geometry.h  NullGeometry.h  PlanarArcGeometry.h  RBendGeometry.cpp  (+5 more)
tests/: CMakeLists.txt  Main.cpp
tools/: CMakeLists.txt  README
(+4162 files in other folders)
